[package]
name = "twitter-bot"
version = "0.3.1"
authors = ["Gabriele <gabriele.belluardo@outlook.it>"]
edition = "2018"
description = "A good bot that tweets automatically for every new blog post"
homepage = "https://github.com/gabelluardo/twitter-bot"
repository = "https://github.com/gabelluardo/twitter-bot"
documentation = "https://github.com/gabelluardo/twitter-bot/blob/master/README.md"
readme = "README.md"
license = "MIT"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
reqwest = "0.10"
rss = "1.9"
structopt = "0.3"

[dependencies.egg-mode]
version = "0.15"
features = ["rustls"]
default-features = false

[dependencies.tokio]
version ="1.8.4"
features = ["macros"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"
tag-message = "{{tag_name}}"
pre-release-commit-message = "{{version}}"
